Cleaning up some formatting in the quotes section of Ch3

--- a/4T/ch3.tex
+++ b/4T/ch3.tex
@@ -154,21 +154,23 @@ Jonah learns the other TA group is \textit{also} looking for Cyril Magnin.  He c
 
 ``I'm sure it will be alright as long as I can get off on the right foot. ... uh.'' 
 
-                - Oliver, to his mother.  (Oliver's right leg is the injured one.)
+\extraIndent{- Oliver, to his mother.  (Oliver's right leg is the injured one.)}
 
 
 
 Jaya: ``Where the \textit{fuck} is Langdon?'' (She gets his name right)
 
+\parskip=0pt
 Jonah (making fun of her): ``Who's 'Langdon'?''
 
+\parskip=0pt
 Hayley: ``Maybe he drowned?''
 
 
 
 ``Senior Constable, someone once told me there are only two pains in life: the pain of discipline and the pain of regret.  I'm going to see that you have no regrets.''
 
-                - Morgan, to Jaya
+\extraIndent{- Morgan, to Jaya}
 
 
 
@@ -176,19 +178,19 @@ Hayley: ``Maybe he drowned?''
 
 ``Shut up and show me.''
 
-                - Jaya and Morgan
+\extraIndent{- Jaya and Morgan}
 
 
 
 ``I didn't know her name.  I don't usually ask any more.''
 
-- Hayley
+\extraIndent{- Hayley}
 
 
 
 ``You know, I don't think she said 'No'.''
 
-- Jonah, to Jaya and Oliver, after Hayley is gone for hours
+\extraIndent{- Jonah, to Jaya and Oliver, after Hayley is gone for hours}
 
 
 
@@ -200,7 +202,7 @@ Hayley: ``Maybe he drowned?''
 
 ``I'm sure it was in the forms.''
 
-                - Swan, trying to figure out if Hayley is ok, and Hayley
+\extraIndent{- Swan, trying to figure out if Hayley is ok, and Hayley}
 
 
 
@@ -214,7 +216,7 @@ Hayley: ``Maybe he drowned?''
 
 ``WHAT?!?''
 
-                - Oliver and Hayley
+\extraIndent{- Oliver and Hayley}
 
 
 
@@ -224,13 +226,13 @@ Hayley: ``Maybe he drowned?''
 
 ``That's a good question.  I should have thought to ask.''
 
-                - Oliver and Hayley
+\extraIndent{- Oliver and Hayley}
 
 
 
 ``Maybe it was a test of lung capacity.  Or blood oxygenation.  I'm really good at that!''
 
-- Hayley, grinning widely
+\extraIndent{- Hayley, grinning widely}
 
 
 \vspace{\fill}
