--- a/4T/main.ltx
+++ b/4T/main.ltx
@@ -36,7 +36,9 @@
     }
 }
 \newcommand*{\extraIndent}[2][]{%
+   \begin{flushright}
     \-\hspace{3cm}#2
+    \end{flushright}
 }
 \begin{document}
 \pagestyle{mainmatter}
