More quote cleanup in ch3 & ch4. Adding in the  macro, correcting (agian) the  macro

--- a/4T/ch3.tex
+++ b/4T/ch3.tex
@@ -157,15 +157,13 @@ Jonah learns the other TA group is \textit{also} looking for Cyril Magnin.  He c
 \extraIndent{- Oliver, to his mother.  (Oliver's right leg is the injured one.)}
 
 
-
+\quotedDialog{
 Jaya: ``Where the \textit{fuck} is Langdon?'' (She gets his name right)
 
-\parskip=0pt
 Jonah (making fun of her): ``Who's 'Langdon'?''
 
-\parskip=0pt
 Hayley: ``Maybe he drowned?''
-
+}
 
 
 ``Senior Constable, someone once told me there are only two pains in life: the pain of discipline and the pain of regret.  I'm going to see that you have no regrets.''
@@ -173,11 +171,11 @@ Hayley: ``Maybe he drowned?''
 \extraIndent{- Morgan, to Jaya}
 
 
-
+\quotedDialog{
 ``Yes ma'am sir! I can maintain team discipline, even when Johnson {[}Oliver{]}...''
 
 ``Shut up and show me.''
-
+}
 \extraIndent{- Jaya and Morgan}
 
 
@@ -193,7 +191,7 @@ Hayley: ``Maybe he drowned?''
 \extraIndent{- Jonah, to Jaya and Oliver, after Hayley is gone for hours}
 
 
-
+\quotedDialog{
 ``Do you know what day it is?''
 
 ``I think it's Thursday.''
@@ -201,11 +199,11 @@ Hayley: ``Maybe he drowned?''
 ``And who is the holder of your contract?''
 
 ``I'm sure it was in the forms.''
-
+}
 \extraIndent{- Swan, trying to figure out if Hayley is ok, and Hayley}
 
 
-
+\quotedDialog{
 ``Are you ok?  Where were you?''
 
 ``They were putting me through a test.''
@@ -215,17 +213,17 @@ Hayley: ``Maybe he drowned?''
 ``Well I think they tried to kill me.''
 
 ``WHAT?!?''
-
+}
 \extraIndent{- Oliver and Hayley}
 
 
-
+\quotedDialog{
 ``What?  How?''``I think they tried to drown me in pudding.''
 
 ``What were they testing!?!''
 
 ``That's a good question.  I should have thought to ask.''
-
+}
 \extraIndent{- Oliver and Hayley}
 
 
