--- a/4T/ch4.tex
+++ b/4T/ch4.tex
@@ -162,20 +162,20 @@ BTW - Mention something about buying skills?   Nate did! It's awesome! Kinda' li
 
 ``Agent! Morgan! Agent! Morgan!''
 
-- Running mantra
+\extraIndent{- Running mantra}
 
 
 
 ``Oh he looks like a thug?  Why didn't you say so?  It's okay then.''
 
-- Rebecca, relieved to have someone it's clearly okay to beat up.
+\extraIndent{- Rebecca, relieved to have someone it's clearly okay to beat up.
+}
 
--
-
+\quotedDialog{
 ``You get to the door before he can lock it''
 
 ``Good, because I only had two shoulders''
-
+}
 \extraIndent{- Nate and Suko, referring to Hayley's accumulating injuries going through the last two doors.}
 
 
@@ -183,5 +183,5 @@ BTW - Mention something about buying skills?   Nate did! It's awesome! Kinda' li
 
 \begin{flushright}
 \textsubscript{last edited by \textbf{Nathaniel Ford} @ 05/07/15 4:28pm}
-% Exported @ 08/22/15 12:55pm
+% Exported @ 08/22/15 1:10pm
 \end{flushright}
