Quote section cleanup on ch5

--- a/4T/ch5.tex
+++ b/4T/ch5.tex
@@ -429,27 +429,27 @@ Oliver mentions that his physical therapy is going well and voluntarily makes an
 
 ``We're testing new equipment that will put us in missions. And we will \textit{handle }them.''
 
-- Jaya
+\extraIndent{- Jaya}
 
 
-
+\quotedDialog{
 ``You can be skeptical while testing the equipment.  But you are still going to do this.  Is that clear?''
 
 ``Sure Chief.  Whatever you say.''
-
-                - Jaya and Jonah
+}
+\extraIndent{                - Jaya and Jonah}
 
 
 
 ``Yeah well..you should see the other guy!  We, like, killed him.''
 
-- Jaya, defending her new war wound's badass-ness.
+\extraIndent{- Jaya, defending her new war wound's badass-ness.}
 
 
 
 ``A desk job in {[}Jaya's{]} world is someone chucking a desk at her.''
 
-- Ion
+\extraIndent{- Ion}
 
 
 
@@ -463,18 +463,18 @@ Oliver mentions that his physical therapy is going well and voluntarily makes an
 
 ``Well I got your drink, so I think you gotta show me yours first.''
 
-- Zara Thustra, to Jonah
+\extraIndent{- Zara Thustra, to Jonah}
 
 
-
+\quotedDialog{
 ``I'm not young and stupid you know.''
 
 ``Yeah, I know.  You're not young anymore.''
+}
+\extraIndent{- Riva and Jonah (who is being brotherly)}
 
-- Riva and Jonah (who is being brotherly)
 
-
-
+\quotedDialog{
 ``They haven't killed me yet.''
 
 ``How do you handle it?''
@@ -484,16 +484,16 @@ Oliver mentions that his physical therapy is going well and voluntarily makes an
 ``Or worse.''
 
 ``Hmm.  You're right, worse IS worse. \textless Pauses to think\textgreater  At first I couldn't handle it.  It was hard.  I was scared and I screamed a lot.  Then I couldn't scream anymore since my voice gave out, and it didn't stop him anyway, so I had to do something else.''
+}
+\extraIndent{                - Hayley and Gillian}
 
-                - Hayley and Gillian
 
-
-
+\quotedDialog{
 ``As long as {[}the Filis{]} are alive, there is nothing that can be done!''
 
 ``Alright, at least there's an option then.''
-
-                - Gillian and Hayley
+}
+\extraIndent{                - Gillian and Hayley}
 
 
 
