Adding gitignore file and correcting Ch6 quotes & 2 broken comments

--- a/4T/ch6.tex
+++ b/4T/ch6.tex
@@ -44,7 +44,7 @@ The team arrives.  The table is large and the agents are all sitting at one end 
 
 
 
-Morgan claims that ``learning from past mistakes'' the agents will give the patrol information about their mission and ... let them decide for themselves if it is enough to go on.  They have the option to refuse.  (Whether that's actually an option is not so obvious: Morgan and Rook both make it clear later that time is absolutely of the essence, and attempts to take time to plan are clearly not looked upon favorably.)I may have been unclear here; the intended effect was 'you can take your time, but the more time taken, the less value it has'. Morgan, naturally, wants the most value. ;-)
+Morgan claims that ``learning from past mistakes'' the agents will give the patrol information about their mission and ... let them decide for themselves if it is enough to go on.  They have the option to refuse.  \hl{(Whether that's actually an option is not so obvious: Morgan and Rook both make it clear later that time is absolutely of the essence, and attempts to take time to plan are clearly not looked upon favorably.)}\footnote{\textbf{Nathaniel Ford }I may have been unclear here; the intended effect was 'you can take your time, but the more time taken, the less value it has'. Morgan, naturally, wants the most value. ;-) \textsubscript{09/4/12 }}
 
 
 
@@ -121,10 +121,12 @@ Rook: None really.  (It appears overall that leopards don't change their spots v
 
 
 
-Jaya accepts the mission without hesitation.  Unsurprisingly none of the others say otherwise.  \hl{Jonah tries to ask Rook about further preparation or advice after Morgan leaves.}\footnote{\textbf{Adam Kenney }Does anyone remember the exact question that blew Rook's mind?  I seem to recall that it was a strangely specific topic, I think about trains, but I can't remember exactly. \textsubscript{09/02/12 7:42am}}\footnote{$\rightarrow$\textbf{q.google }Actually now that you mention it... the question was initially about whether we would have preparation time at base.  When the answer was (I think) negative it changed to whether we would have preparation time on the train.  But it was phrased as asking *how long the trip would be*. \textsubscript{09/02/12 12:39pm}}Yes, that's right!  What you asked him was how long the trip would be.  He 
+Jaya accepts the mission without hesitation.  Unsurprisingly none of the others say otherwise.  \hl{Jonah tries to ask Rook about further preparation or advice after Morgan leaves.}\footnote{\textbf{Adam Kenney }Does anyone remember the exact question that blew Rook's mind?  I seem to recall that it was a strangely specific topic, I think about trains, but I can't remember exactly. \textsubscript{09/02/12 7:42am}}\footnote{$\rightarrow$\textbf{q.google }Actually now that you mention it... the question was initially about whether we would have preparation time at base.  When the answer was (I think) negative it changed to whether we would have preparation time on the train.  But it was phrased as asking *how long the trip would be*. \textsubscript{09/02/12 12:39pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }Yes, that's right!  What you asked him was how long the trip would be.  He 
 asked like you asked the distance between the two moons or something. 
+
+    Adam  \textsubscript{09/02/12}}
  
-    Adam  This seems to stymie Rook, though whether it's from uncertainty, indignation at being asked, or some other cause Jonah is not able to tell.   Jonah behaves as if asking is perfectly normal and that he is satisfied with Rook's lack of an answer.
+This seems to stymie Rook, though whether it's from uncertainty, indignation at being asked, or some other cause Jonah is not able to tell.   Jonah behaves as if asking is perfectly normal and that he is satisfied with Rook's lack of an answer.
 
 
 \jumpHeadline{The Requisition Cage }
@@ -270,7 +272,7 @@ Hayley hides.  Oliver shoulders his rifle and runs over to Hayley to make sure s
 \underline{  {\LARGE Quotes }  }
 
 
-
+\quotedDialog{
 Raj: So, yeah, the Directorate, aren't you the ones with the Sultan who likes tea?
 
 Oliver: Not us.   We don't have a ...  Sultan?
@@ -278,43 +280,27 @@ Oliver: Not us.   We don't have a ...  Sultan?
 Jonah: We have a Senate.
 
 Raj (friendly sarcasm): Oh\textit{ yeah}.  That must be it.  A\textit{ Senate}.
-
+}
 
 
 ``Don't worry.  Not all women hit that hard''.
 
-\extraIndent{– Jonah, explaining the facts of life to Jayce}
+\extraIndent{- Jonah, explaining the facts of life to Jayce}
 
 
-
+\quotedDialog{
 ``Why would I stay with you?  You're two crazy bitches and a guy who can't get over the war.''
 
 ``And doesn't miss.''
 
 ``Good point.''
-
-                - Jayce and Jonah
+}
+\extraIndent{ - Jayce and Jonah}
 
 
 
 \textit{{[}}\textit{There was some other funny discussion between Jonah and Jayce about the nature of women (funnier given the ignorance of the Water Rats about same) but it wasn't written down.{]}}
 
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to find a matching comment for footnote: I may have been unclear here; the intended effect was 'you can take your time, but the more time taken, the less value it has'. Morgan, naturally, wants the most value. ;-)
-
-	Unable to find a matching comment for footnote: Yes, that's right!  What you asked him was how long the trip would be.  He 
-asked like you asked the distance between the two moons or something. 
- 
-    Adam
-
-
-\fi
 
 \vspace{\fill}
 
