Quote cleanups and some highlighting corrections for ch7

--- a/4T/ch7.tex
+++ b/4T/ch7.tex
@@ -61,7 +61,7 @@ About 100 meters down the incline there is another tunnel that intersects this o
 
 
 
-Jaya leans over the edge and spits into darkness to see if she can tell how deep it is \textit{{[}}\textit{\textbf{???}}\textit{: }\textit{12 Tokens enter the threat pool}\footnote{\textbf{q.google }What was the name of the Threat? \textsubscript{09/06/12 3:49pm}}\textit{{]}.}   A colony of bats swarms out of the darkness \textit{{[}Challenge: Argh!  Bats!{]}}.  Jaya flips out, grabbing bats out of the air and stomping on them and flailing around with her truncheon, nearly smashing Hayley in the face, but we manage to survive the bats.  
+Jaya leans over the edge and spits into darkness to see if she can tell how deep it is \textit{{[}}\textit{\textbf{???}}\textit{: }\textit{\hl{12 Tokens enter the threat pool}}\footnote{\textbf{q.google }What was the name of the Threat? \textsubscript{09/06/12 3:49pm}}\textit{{]}.}   A colony of bats swarms out of the darkness \textit{{[}Challenge: Argh!  Bats!{]}}.  Jaya flips out, grabbing bats out of the air and stomping on them and flailing around with her truncheon, nearly smashing Hayley in the face, but we manage to survive the bats.  
 
 
 
@@ -106,7 +106,7 @@ With the squad reassembled, we head into the corridor.  As soon as we set foot i
 
 
 
-Hayley helps bandage Jonah's injured wrist \textit{{[}Medkit 1 to reduce Sprained Wrist Flaw to 0{]}.}  She shows him a good way to wrap the bandages to allow for at least some limited movement, explaining that she learned to do that because sometime she had to do tests while still recovering from... something.  She doesn't specify what but gestures vaguely at Jonah's bandaged wrist.  When Jonah asks what she means by ``tests\footnote{\textbf{q.google }It's more like ``Wait, what, \_tests\_, they made you take \_tests\_?'' but not coherently enough due to be clear due to the pain and time pressure. \textsubscript{09/06/12 3:55pm}}``, she just shakes her head. \textit{{[}Challenge: Notice something during bandaging{]}}.  \textit{{[}OOG: Ion gets pulled into hallway to be told something super sekrit{]}}.
+Hayley helps bandage Jonah's injured wrist \textit{{[}Medkit 1 to reduce Sprained Wrist Flaw to 0{]}.}  She shows him a good way to wrap the bandages to allow for at least some limited movement, explaining that she learned to do that because sometime she had to do tests while still recovering from... something.  She doesn't specify what but gestures vaguely at Jonah's bandaged wrist.  When \hl{Jonah asks what she means by ``tests}\footnote{\textbf{q.google }It's more like ``Wait, what, \_tests\_, they made you take \_tests\_?'' but not coherently enough due to be clear due to the pain and time pressure. \textsubscript{09/06/12 3:55pm}}'', she just shakes her head. \textit{{[}Challenge: Notice something during bandaging{]}}.  \textit{{[}OOG: Ion gets pulled into hallway to be told something super sekrit{]}}.
 
 
 
@@ -290,12 +290,12 @@ Oliver: 3
 \underline{  {\LARGE Quotes }  }
 
 
-
+\quotedDialog{
 ``We can use the rope, right?''
 
 ``Not if she falls down the pit and dies.''
-
-                        - Jonah and Jaya
+}
+\extraIndent{ - Jonah and Jaya}
 
 
 
@@ -304,12 +304,12 @@ Oliver: 3
 \extraIndent{- Jaya}
 
 
-
+\quotedDialog{
 ``Is there a Level 1 Flaw that applies to this?''
 
 ``Nerd.''
-
-                        - Adam and Rebecca
+}
+\extraIndent{- Adam and Rebecca}
 
 
 
@@ -317,19 +317,6 @@ Oliver: 3
 
 \extraIndent{- Rebecca}
 
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: What was the name of the Threat? because:GivenExpected12 Tokens enter the threat pool12 Tokens enter the Pool
-
-	Unable to highlight for footnote: It's more like "Wait, what, _tests_, they made you take _tests_?" but not coherently enough due to be clear due to the pain and time pressure. because:GivenExpectedJonah asks what she means by “testsJonah asks what tests
-
-
-\fi
 
 \vspace{\fill}
 
