Adding basic ch8 content

--- a/4T/main.ltx
+++ b/4T/main.ltx
@@ -52,7 +52,8 @@
 \begin{document}
 \pagestyle{mainmatter}
 \renewcommand{\chaptermark}[1]{ \markboth{#1}{} }
-\tableofcontents
+
+   \tableofcontents
 
 \include{ch1}
 \include{ch2}
@@ -61,5 +62,6 @@
 \include{ch5}
 \include{ch6}
 \include{ch7}
+\include{ch8}
     
 \end{document}
