Repairing highlights and quotes for ch8

--- a/4T/ch8.tex
+++ b/4T/ch8.tex
@@ -148,7 +148,7 @@ Oliver patiently shows Hayley how to tread water. While she practices, Hayley as
 
 
 
-They talk about Oliver's leg again and the subject of him dying and coming back comes up.  Hayley curiously asks what it was like.  Oliver says he doesn't remember but ``if you know what it was like, you probably don't get to come back.''  Hayley says that she thinks about it {[}death{]} all the time.  When Oliver looks inquiring, she elaborates, ``because it was my purpose.''  Then she then looks alarmed again and says that she's not supposed to talk about that either.  Oliver says that she doesn't have to talk about it if she doesn't want to, which relieves her. She complains about having to remember so many rules.  Hayley says that she is glad that Oliver isn't dead, it would be sad if he died.  Oliver \hl{looks away and says nothing}\footnote{\textbf{Suko T }Tragic Hero pose \#4 \textsubscript{11/02/12 1:04am}}\footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{11/04/12 4:31pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }There was an awful lot of this. \textsubscript{11/04/12 5:46pm}}+1.
+They talk about Oliver's leg again and the subject of him dying and coming back comes up.  Hayley curiously asks what it was like.  Oliver says he doesn't remember but ``if you know what it was like, you probably don't get to come back.''  Hayley says that she thinks about it {[}death{]} all the time.  When Oliver looks inquiring, she elaborates, ``because it was my purpose.''  Then she then looks alarmed again and says that she's not supposed to talk about that either.  Oliver says that she doesn't have to talk about it if she doesn't want to, which relieves her. She complains about having to remember so many rules.  Hayley says that she is glad that Oliver isn't dead, it would be sad if he died.  Oliver \hl{looks away and says nothing}\footnote{\textbf{Suko T }Tragic Hero pose \#4 \textsubscript{11/02/12 1:04am}}\footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{11/04/12 4:31pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }There was an awful lot of this. \textsubscript{11/04/12 5:46pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/04/12 8:05pm}}.
 
 
 
@@ -244,7 +244,7 @@ Agent Morgan tells him that the Orc is suspected of assassinating over 2 scores 
 
 
 
-Oliver says that since he's going to die anyway, he might as well do some good.  Now that Agent Morgan has the much more capable Patrol Group 2, his group is no longer needed.  Agent Morgan denies that his group is obsolete and asks him if he trusts his team.  He says he trusts everyone but Jonah, and \hl{then clarifies that he doesn't trust Jonah, but he likes him}\footnote{\textbf{q.google }Awwwww!  Spoken like a true comrade-in-arms :). \textsubscript{10/23/12 1:36pm}}.  He trusts Jaya, but doesn't like her.  He doesn't mention his opinion on Hayley\footnote{\textbf{Suko T }at least so far as I recall although my notes are a bit sketchy in this spot with all the dialog going on \textsubscript{10/21/12 2:56am}}\footnote{$\rightarrow$\textbf{Adam Kenney }I think he said that he trusts everyone but Jonah.  Then he clarified with the bit about liking/not trusting, trusting/not liking. \textsubscript{10/22/12 8:01pm}}\footnote{$\rightarrow$\textbf{Suko T }Oh right!  I forgot the first bit.  I even chuckled about it because it was a pity Ion wasn't there to hear it :D \textsubscript{10/22/12 10:19pm}}\footnote{$\rightarrow$\textbf{q.google }Suko and I have had several conversations about this issue of trust vs liking (or allies vs friends) at this point both IG and OOG.  The distinction between what Oliver is calling trust and what Jonah would call trust has proved very insightful for me.  One of the surprising consequences was realizing that Jonah's reaction to learning that Oliver likes but doesn't trust him, would be to \_trust Oliver more\_. \textsubscript{11/28/12 11:47am}}\footnote{$\rightarrow$\textbf{Adam Kenney }Oliver tends to trust people when he can read them.  He doesn't have to understand their thought processes or reasoning, but if he feels like he has a sense of how they're reacting to things and what their emotional positioning is towards him, then he will tend to trust them.  An odd definition of trust by most means.  Probably comes out of having parents whose projected attitude towards him is sometimes very different from their real emotions/thoughts. \textsubscript{11/28/12 2:23pm}}\footnote{$\rightarrow$\textbf{q.google }I must revise what I said then because that's mostly Jonah's definition.  He also tends to trust people when he can read them, though he's less worried about their attitude towards him and more about what they want, and how they are likely to act under stress.
+Oliver says that since he's going to die anyway, he might as well do some good.  Now that Agent Morgan has the much more capable Patrol Group 2, his group is no longer needed.  Agent Morgan denies that his group is obsolete and asks him if he trusts his team.  He says he trusts everyone but Jonah, and \hl{then clarifies that he doesn't trust Jonah, but he likes him}\footnote{\textbf{q.google }Awwwww!  Spoken like a true comrade-in-arms :). \textsubscript{10/23/12 1:36pm}}.  He trusts Jaya, but doesn't like her.  \hl{He doesn't mention his opinion on Hayley}\footnote{\textbf{Suko T }at least so far as I recall although my notes are a bit sketchy in this spot with all the dialog going on \textsubscript{10/21/12 2:56am}}\footnote{$\rightarrow$\textbf{Adam Kenney }I think he said that he trusts everyone but Jonah.  Then he clarified with the bit about liking/not trusting, trusting/not liking. \textsubscript{10/22/12 8:01pm}}\footnote{$\rightarrow$\textbf{Suko T }Oh right!  I forgot the first bit.  I even chuckled about it because it was a pity Ion wasn't there to hear it :D \textsubscript{10/22/12 10:19pm}}\footnote{$\rightarrow$\textbf{q.google }Suko and I have had several conversations about this issue of trust vs liking (or allies vs friends) at this point both IG and OOG.  The distinction between what Oliver is calling trust and what Jonah would call trust has proved very insightful for me.  One of the surprising consequences was realizing that Jonah's reaction to learning that Oliver likes but doesn't trust him, would be to \_trust Oliver more\_. \textsubscript{11/28/12 11:47am}}\footnote{$\rightarrow$\textbf{Adam Kenney }Oliver tends to trust people when he can read them.  He doesn't have to understand their thought processes or reasoning, but if he feels like he has a sense of how they're reacting to things and what their emotional positioning is towards him, then he will tend to trust them.  An odd definition of trust by most means.  Probably comes out of having parents whose projected attitude towards him is sometimes very different from their real emotions/thoughts. \textsubscript{11/28/12 2:23pm}}\footnote{$\rightarrow$\textbf{q.google }I must revise what I said then because that's mostly Jonah's definition.  He also tends to trust people when he can read them, though he's less worried about their attitude towards him and more about what they want, and how they are likely to act under stress.
 
 The distinction between liking and trusting is still very interesting.  The two are \_very\_ distinct for Jonah. \textsubscript{11/30/12 1:10pm}}\footnote{$\rightarrow$\textbf{Suko T }''An odd definition of trust by most means.''
 Hmm, I don't know that it's an odd definition of trust as it makes sense, both for the character and in general.
@@ -364,7 +364,7 @@ Jaya meets with Dr. Gerhauser and asks about Jonah.  Dr. Gerhauser is confident 
 
 
 
-Hayley is exercising at the ready line when she notices Lackovich watching her.  She greets her in a friendly manner, but doesn't quite remember who Lackovich is.  Lackovich asks how long Hayley has been here, to which Hayley replies ``a few months I think.''  Lackovich asks if she likes it here, and Hayley nods cheerfully.  Hayley asks if Lackovich is a part of Patrol Group 2, and then thanks her for saving them.  Lackovich realizes that Hayley works for ``that fucking bitch in Patrol Group 1''.  She mentions how all of her team died due to Hayley and the rest of Patrol Group 1.  Hayley finally realizes just who Lackovich is and tries to give her condolences for the death of Lackovich's teammates.  Infuriated, Lackovich slaps Hayley.  Hayley accepts the slap and stays very still and tense for a second, as if braced for further abuse.  When none follows, she relaxes and looks back at Lackovich and says earnestly, ``I really am very sorry.''  \hl{Lackovich pretty much loses her shit at this point and starts screaming at Hayley that she is so very very fucked.}\footnote{\textbf{q.google }We call \_this\_ Professional Decorum. \textsubscript{10/23/12 1:55pm}}\footnote{$\rightarrow$\textbf{Suko T }Clearly the members of Morgan's teams are chosen for their mental stability and social graces. \textsubscript{10/23/12 3:50pm}}+1  Concerned, Hayley reaches out to Lackovich with a placating gesture, asking if she is okay and if she needs a doctor.  Lackovich hisses at Hayley to stay the hell away away from her.   Hayley agrees and backs away and Lackovich storms off.
+Hayley is exercising at the ready line when she notices Lackovich watching her.  She greets her in a friendly manner, but doesn't quite remember who Lackovich is.  Lackovich asks how long Hayley has been here, to which Hayley replies ``a few months I think.''  Lackovich asks if she likes it here, and Hayley nods cheerfully.  Hayley asks if Lackovich is a part of Patrol Group 2, and then thanks her for saving them.  Lackovich realizes that Hayley works for ``that fucking bitch in Patrol Group 1''.  She mentions how all of her team died due to Hayley and the rest of Patrol Group 1.  Hayley finally realizes just who Lackovich is and tries to give her condolences for the death of Lackovich's teammates.  Infuriated, Lackovich slaps Hayley.  Hayley accepts the slap and stays very still and tense for a second, as if braced for further abuse.  When none follows, she relaxes and looks back at Lackovich and says earnestly, ``I really am very sorry.''  \hl{Lackovich pretty much loses her shit at this point and starts screaming at Hayley that she is so very very fucked.}\footnote{\textbf{q.google }We call \_this\_ Professional Decorum. \textsubscript{10/23/12 1:55pm}}\footnote{$\rightarrow$\textbf{Suko T }Clearly the members of Morgan's teams are chosen for their mental stability and social graces. \textsubscript{10/23/12 3:50pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{10/24/12}}  Concerned, Hayley reaches out to Lackovich with a placating gesture, asking if she is okay and if she needs a doctor.  Lackovich hisses at Hayley to stay the hell away away from her.   Hayley agrees and backs away and Lackovich storms off.
 
 
 
@@ -391,23 +391,8 @@ Hayley returns to her physical therapy but her rhythm is off, and she ends soone
 
 ``Agent Sir Ma'am, I'm mostly recovered, but some more pills would help.  Oh, uh. Have you seen my team?''
 
-- Jaya
+\extraIndent{- Jaya}
 
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{$\rightarrow$\textbf{Adam Kenney }There was an awful lot of this. \textsubscript{11/04/12 5:46pm}}. Optional comment markups: \footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{11/04/12 4:31pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/04/12 8:05pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{11/04/12 4:31pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{10/24/12 9:12am}}\footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{10/24/12 9:06am}} 
-
-	Unable to highlight for footnote: at least so far as I recall although my notes are a bit sketchy in this spot with all the dialog going on because:GivenExpectedHe doesn’t mention his opinion on HayleyHe doesn’t mention Hayley
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{$\rightarrow$\textbf{Suko T }Clearly the members of Morgan's teams are chosen for their mental stability and social graces. \textsubscript{10/23/12 3:50pm}}. Optional comment markups: \footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{11/04/12 4:31pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/04/12 8:05pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{11/04/12 4:31pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{10/24/12 9:12am}}\footnote{$\rightarrow$\textbf{Adam Kenney }+1 \textsubscript{10/24/12 9:06am}} 
-
-
-\fi
 
 \vspace{\fill}
 
